@@ -1,15 +1,15 @@
-package com.example.platformvsvirtual;
+package com.example.platformvsvirtual.workload;
 
 import java.util.Scanner;
 import java.util.concurrent.*;
 
-public class HighBlockingIOWithPlatformThreads {
+public class HighIOWorkloadWithVirtualThreads {
 
     public static void main(String[] args) throws Exception {
         System.out.println("Press Enter to start");
-        new Scanner(System.in).nextLine(); // Wait for enter
+        new Scanner(System.in).nextLine();
 
-        ExecutorService executor = Executors.newFixedThreadPool(100);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
         executeConcurrentWorkload(executor, 10_000);
         System.out.println("Press Enter to finish");
         new Scanner(System.in).nextLine();
